# rust-static-analysis

./: Cargo.toml  test.py
src/: main.rs
