[package]
name = "rust-static-analysis"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter="*"        # https://lib.rs/crates/tree-sitter
tree-sitter-python="*" # https://lib.rs/crates/tree-sitter-python
